# Proyecto_git_software

./: .cproject  .gitignore  .project  CMakeLists.txt  Documento sin título 1  Prueba.cc  README.md  alarm.cc  alarm.h  alerta.cc  alerta.h  main.cc  prueba.txt  usuario.h
data/: Especificación_tablas_clases.sql  inserciones_ejemplo.sql  inserciones_ejemplo2.sql  sitapi.db
src/: alerta.cc  alerta.h  asignacion.cc  asignacion.h  chat.cc  chat.h  mensaje.cc  mensaje.h  usuario.cc  usuario.h
src/clases/: alerta.cc  alerta.h  usuario.h
src/infrastructure/: basedatos.cc  basedatos.h
src/models/: alerta.cc  alerta.h  asignacion.cc  asignacion.h  chat.cc  chat.h  mensaje.cc  mensaje.h  usuario.cc  usuario.h
src/repositories/: alerta_repo.cc  alerta_repo.h  asignacion_repo.cc  asignacion_repo.h  chat_repo.cc  chat_repo.h  coordinador_repo.cc  coordinador_repo.h  estudiante_repo.cc  estudiante_repo.h  tutor_repo.cc  tutor_repo.h
src/services/: servicio_alerta.cc  servicio_alerta.h  servicio_asignacion.cc  servicio_asignacion.h  servicio_chat.cc  servicio_chat.h  servicio_sesion.cc  servicio_sesion.h
src/views/: chat_window.cc  chat_window.h  login_window.cc  login_window.h  main_window.cc  main_window.h
tests/: unit_tests.cc
